# nextflow_workflows

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build  meson_options.txt  readme.md  zen_of_nextflow.md
docs/: parallelism_design.md  pilot_workflow.puml  references.bib  wgs_pilot_issues.md  zen_of_nextflow.md
modules/: meson.build  readme.md
modules/arriba_nextflow/: main.nf  meson.build
modules/biomarker/: main.nf  manta.nf  meson.build  msisensor_pro.nf  picard.nf  sequenza_scarhrd.nf  sigprofiler.nf
modules/clc_nextflow/: Dockerfile  build_container.sh  clc_client.containerfile  download_clc_cli_tools.sh  main.nf  meson.build  readme.md
modules/manta_nextflow/: main.nf
modules/nextpipe/: LICENSE  README.md  main.nf  nextflow.config  readme.md  run_workflow.sh
modules/nextpipe/docs/: pancancer_workflow.puml
modules/oncoscanner/: main.nf  meson.build  nextflow.config  slurm.config  user.config
modules/picard_qc_nextflow/: main.nf
modules/samfix/: Containerfile  main.nf  samfix.py  test_samfix.py
modules/sarek_wrapper/: main.nf  nextflow.config  test.sh
modules/sclust/: main.nf  meson.build  readme.md
modules/sequence_alignment/: align_and_postprocess.nf  bwa.nf  bwamem2.nf  fastp.nf  fastqc.nf  gatk.nf  gatk_markduplicates.nf  gatk_mutect.nf  main.nf  meson.build  preproc_align.nf  sambamba.nf  samtools.nf  utils.nf
modules/sequenza_scarhrd_nextflow/: main.nf
modules/structual_variants_annotate/: run_sv_submit.sh  sv_ready_for_submit.nf
modules/ukb_main_workflow/: download_testdata.sh  main.nf  meson.build  nextflow.config  preproc_testdata.sh  slurm.config  test_main.config  user.config
scripts/: .gitignore  bcftools_filter.sh  build_deps.sh  build_pipeline_container.sh  download_data.py  download_igenomes.py  download_testdata_big.sh  download_testdata_medium_wes.sh  gen_containerfile.sh  igenomes_sha256sum.txt  install_deps.sh  make_release.sh  nextflow_container.containerfile  pipeline.containerfile  pipeline_container.containerfile  pipeline_task.containerfile  preproc_testdata.sh  readme.md  render_citations.py  run_container.sh  run_full_container.sh  sbatch_example.sh  setup_tests.sh  testdata_big_md5sum.txt  version_tool.py
scripts/download_igenomes/: download_igenomes.py  files.txt  readme.md
scripts/setup_reference_data/: download_igenomes.py  readme.md  sarek_igenomes_gatk_grch38_http_urls.txt
